@@ -23,8 +23,8 @@ var defaultGatewaySettings = &fleetGatewaySettings{
 	Duration: 1 * time.Second,        // time between successful calls
 	Jitter:   500 * time.Millisecond, // used as a jitter for duration
 	Backoff: backoffSettings{ // time after a failed call
-		Init: 5 * time.Second,
-		Max:  60 * time.Second,
+		Init: 60 * time.Second,
+		Max:  10 * time.Minute,
 	},
 }
 
